--- a/src/views/email/NewMessage/style.css
+++ b/src/views/email/NewMessage/style.css
@@ -1,24 +1,22 @@
 textarea,
 input.form-control {
-    background: #d4d4d4;
-    color: #000;
+	background: #d4d4d4;
+	color: #000;
 }
 
 ::placeholder,
 .form-control::placeholder {
-    color: #333;
+	color: #333;
 }
 
-
-
 textarea {
-    background: #d4d4d4;
+	background: #d4d4d4;
 }
 
 input.form-control:focus,
 textarea:focus {
-    background: #d4d4d4;
-    color: #000;
+	background: #d4d4d4;
+	color: #000;
 }
 
 .unread {
@@ -33,32 +31,9 @@ textarea:focus {
 	color: #b6b6b6;
 }
 
-.user-name {
-	transform: translateY(-48px);
-	position: absolute;
-	padding-left: 4rem;
-	font-size: larger;
-}
-
-.user-email {
-	transform: translateY(-22px);
-	position: absolute;
-	padding-left: 4rem;
-	font-size: small;
-}
-
-.image-container {
-	width: 48px;
-	height: 48px;
-	overflow: hidden;
-	border-radius: 24px;
-	object-fit: contain;
-	justify-content: center;
-}
-
 .card240 {
 	width: 240px;
-	margin-bottom: 24px;
+	margin-bottom: 4px;
 	box-shadow: 0 0.75rem 6rem rgba(56, 65, 74, 3%);
 	position: relative;
 	display: flex;
@@ -66,20 +41,6 @@ textarea:focus {
 	min-height: 0;
 	word-wrap: break-word;
 	border-radius: .25rem;
-}
-
-.borderBtm {
-	border-bottom: 1px solid #636f83;
-	padding-bottom: 1rem;
-}
-
-.borderTop {
-	border-top: 1px solid #636f83;
-	padding-top: 1rem;
-}
-
-.email-body {
-	padding: 0.5rem 2.5rem 0 2.5rem;
 }
 
 .flexRowMsg {
